fix: 내후기 기능 구현 (불필요한 필드 삭제)